Fixed alignment for desktops

--- a/src/App.scss
+++ b/src/App.scss
@@ -1155,7 +1155,7 @@ table {
   display: flex;
   flex-direction: column;
   align-self: center;
-  width: 30rem;
+  width: 100%;
 
   .header {
     display: flex;
@@ -1240,12 +1240,11 @@ table {
 
   .map-stats {
 
-    margin-top: 20px;
+    margin-top: 80px;
 
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 5rem;
     position: relative;
 
     h1,
